--- a/browser.html
+++ b/browser.html
@@ -10,7 +10,7 @@
 
 <frameset cols="450,*" frameborder="1" border="3" bordercolor="#cccccc">
     <frame src="nav/navigation.html" name="navigation" scrolling="auto" noresize="noresize" />
-    <frame src="nav/welcome.html" name="main" scrolling="auto" />
+    <frame src="nav/topics/welcome.html" name="main" scrolling="auto" />
 </frameset>
 
 <noframes>
