--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -6,7 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <style type="text/css">
     body{
-        background-color: #fdfdfdfd;
+        background-color: #f4f1e3;
+          font-family: 'Goudy Old Style', 'Times New Roman', serif;
     }
     .item{
         margin: 15px 15px 15px 0px;
