--- a/nav/topics/fishing.html
+++ b/nav/topics/fishing.html
@@ -1,1 +1,20 @@
-fishh
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<title>Lucius Library</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<link rel="stylesheet" type="text/css" href="../styling.css" />
+
+
+<base target="topic" />
+<meta name="author" content="J. Singh" />
+</head>
+
+<body bgcolor="#FFFFFF">
+
+
+
+
+</body>
+</html>
