--- a/title.html
+++ b/title.html
@@ -9,7 +9,8 @@
         margin: 0;
     }
     body{
-        background-color: #f3f3f3fd;
+        background-color: #f4f1e3;
+          font-family: 'Goudy Old Style', 'Times New Roman', serif;
         margin: 0;
     }
     .item{
