--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -11,9 +11,13 @@
     }
     .item{
         margin: 15px 15px 15px 0px;
+            transition-duration: 0.1s;
+
     }
     .item:hover { 
     background-color: #1abc9c; 
+    transition-duration: 0.1s;
+
     }
     a{
         text-decoration: none;
