--- a/nav/topics/welcome.html
+++ b/nav/topics/welcome.html
@@ -12,7 +12,7 @@
 <div style="text-align: center;">
     <h1 style="font-size: 3.5em;">Salve</h1>
     <p>Created and maintained by JS. Inspired by John Walker's online repertoire <a href="https://www.fourmilab.ch" target="_blank"><i>fourmilab.ch</i></a>.
-    <br /> A pitiful attempt at organizing life.
+    <br /> A pitiful attempt at organizing life...
     </p>
 
 </div>
