add "by" in name in title

--- a/title.html
+++ b/title.html
@@ -53,7 +53,7 @@
 
     <div class="title-bar-middle">
         <h1 style="margin-bottom: 0px;"><i>Lucius Library</i></h1>
-        <p style="margin: 0 0 20px; font-size: larger;">J. Singh</p>
+        <p style="margin: 0 0 20px; font-size: larger;"><i>by</i> J. Singh</p>
     </div>
 
 
