--- a/nav/topics/casablancas.html
+++ b/nav/topics/casablancas.html
@@ -12,6 +12,7 @@
 <div style="text-align: center;">
     <img src="images/casablancas/22.webp" alt="Casablancas" style="height:400px;" />
     <img src="images/casablancas/11.webp" alt="Casablancas" style="height:400px;" />
+    <audio srsc="audio/casablancas.mp3" controls>
 
 </div>
 
