--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -52,6 +52,8 @@
 <tr><td><a href="topics/diet.html" target="main"><span class="item">Diet and nutrition</span></a></td></tr>
 <tr><td><a href="topics/automotive.html" target="main"><span class="item">Automotive</span></a></td></tr>
 <tr><td><a href="topics/physics.html" target="main"><span class="item">Physics</span></a></td></tr>
+<tr><td><a href="topics/neurology.html" target="main"><span class="item">Neurology</span></a></td></tr>
+
 
 
 <!-- Medicine,  Where Clinic, Research and Education meets -- for now see Obsidian files for reading, and literature for clinic & research
