--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -37,9 +37,9 @@
 <!-- general overview -->  
 <tr bgcolor="#D0D0FF"><td align="center"><font size="+1"><b>Overview</b></font></td></tr>
 
-<tr><td><a href="/" target="_top"><span class="item">Welcome</span></a></td></tr>
-<tr><td><a href="topics/faq.html"><span class="item">Questions and Answers</span></a></td></tr>
-<tr><td><a href="topics/reading .html"><span class="item">Reading Lists</span></a></td></tr>
+<tr><td><a href="topics/welcome.html" target="main"><span class="item">Welcome</span></a></td></tr>
+<tr><td><a href="topics/faq.html" target="main"><span class="item">Questions and Answers</span></a></td></tr>
+<tr><td><a href="topics/reading .html" target="main"><span class="item">Reading Lists</span></a></td></tr>
 <tr><td><a href="topics/map.html" target="_top"><span class="item">Site Map</span></a></td></tr>
 
 
