--- a/title.html
+++ b/title.html
@@ -48,7 +48,7 @@
 
 <div class="title-bar">
     <div class="title-bar-left">
-        <img style="margin: 0 0 0 50px; width: 110px;" src="logo.png" />
+       <a href="nav/topics/welcome.html" target="main"> <img style="margin: 0 0 0 50px; width: 110px;" src="logo.png" /></a>
     </div>
 
     <div class="title-bar-middle">
