--- a/nav/topics/neurology.html
+++ b/nav/topics/neurology.html
@@ -17,6 +17,9 @@
     <h2 class="topic-item"><a href="neuroanatomy.html">Neuroanatomy</a></h2>
     <h4 class="topic-description">Explore the architecture of our being!</h6>
 
+    <h2 class="topic-item"><a href="neurodriving.html">Extracorporal Mobility Device</a></h2>
+    <h4 class="topic-description">Explore the science of neurodriving!</h6>
+
 
 
 </div>
