--- a/nav/topics/casablancas.html
+++ b/nav/topics/casablancas.html
@@ -13,8 +13,8 @@
     <img src="images/casablancas/22.webp" alt="Casablancas" style="height:400px;" />
     <img src="images/casablancas/11.webp" alt="Casablancas" style="height:400px;" />
     <br>
-    <audio src="images/casablancas/casablancas.mp3" type="audio/mpeg" controls></audio><br>
-    
+    <audio src="images/casablancas/casablancas.mp3" type="audio/mpeg" controls></audio>
+    <br>
     <h3>Never Alone</h3>
 </div>
 
