--- a/nav/topics/neurodriving.html
+++ b/nav/topics/neurodriving.html
@@ -28,9 +28,12 @@
 
 <p>
     There is a transference of the sense of self when we get into the driver's seat of a car. 
-    There is this sublte intamacy, a grandiose trust. Our mind and body expand to novel boundries, those of the rims,
-    front and rear bumper and our blind corners. Our vision of the road transmit itself to subtle adjustments of the (steering)
-    wheel, which in turn, provides us feedback of our actions, further refining the steering. 
+    There is this sublte intimacy, a grandiose trust. Our mind and body expand to novel boundries, those of the rims,
+    front and rear bumper and our blind corners. Our vision of the road transmits itself to subtle adjustments of the (steering)
+    wheel, which in turn, provides us sensory feedback, further refining the steering. This extension of our corporal self seems
+    somewhat universal. The car is a framework designed and refined to fit our biology and reflexes. 
+    
+    The visuomotor eye-head steering coördination ('Oculo-bracial reflex'). 
 </p>
 
 </div>
