--- a/nav/topics/casablancas.html
+++ b/nav/topics/casablancas.html
@@ -4,6 +4,14 @@
 <title>Lucius Library</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="../styling.css" />
+<style type="text/css">
+    
+#timezone{
+    display: block;
+    text-align: center;
+}
+
+</style>
 
 </head>
 
@@ -17,6 +25,11 @@
     <br>
     <h3>Never Alone</h3>
 </div>
+
+<span id="timezone">
+<a href="//24timezones.com/current_time/belgium_brugge_clock.php" style="text-decoration: none" class="clock24" id="tz24-1766231312-c210412-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Brugge Time" target="_blank" rel="nofollow">TIME IN BRUGES</a>
+<script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+</span>
 
 
 </body>
