--- a/nav/topics/welcome.html
+++ b/nav/topics/welcome.html
@@ -14,6 +14,11 @@
     <p>Created and maintained by JS. Inspired by John Walker's online repertoire <a href="https://www.fourmilab.ch" target="_blank"><i>fourmilab.ch</i></a>.
     <br /> A pitiful attempt at organizing life...
     </p>
+    
+    <span id="timezone">
+    <a href="//24timezones.com/current_time/belgium_brugge_clock.php" style="text-decoration: none" class="clock24" id="tz24-1766231312-c210412-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Brugge Time" target="_blank" rel="nofollow">TIME IN BRUGES</a>
+    <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+    </span>
 
 </div>
 
