--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -31,7 +31,8 @@
 <meta name="author" content="J. Singh" />
 </head>
 
-<body bgcolor="#FFFFFF">
+<!-- TEMPORARY-->
+<body bgcolor="#FFFFFF" style="display: none;">
 <table class="topics" width="100%" cellpadding="2">
 
 <!-- general overview -->  
