--- a/index.xhtml
+++ b/index.xhtml
@@ -3,6 +3,7 @@
 <head>
 <title>Lucius Library</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="icon" href="logo.png">
 <link rel="stylesheet" type="text/css" href="styling.css" />
 </head>
 
