--- a/nav/topics/welcome.html
+++ b/nav/topics/welcome.html
@@ -4,6 +4,10 @@
 <title>Lucius Library</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="../styling.css" />
+<link rel="icon" href="../../logo.png">
+<style>
+
+</style>
 
 </head>
 
@@ -15,8 +19,8 @@
     <br /> A pitiful attempt at organizing life...
     </p>
     
-    <span id="timezone">
-    <a href="//24timezones.com/current_time/belgium_brugge_clock.php" style="text-decoration: none" class="clock24" id="tz24-1766231312-c210412-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Brugge Time" target="_blank" rel="nofollow">TIME IN BRUGES</a>
+    <span class="timezone">
+    <a href="//24timezones.com/current_time/belgium_brugge_clock.php" onclick="return false;" style="text-decoration: none; cursor: default;" class="clock24" id="tz24-1766231312-c210412-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMSIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0=" title="Brugge Time" target="_blank" rel="nofollow">TIME IN BRUGES</a>
     <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
     </span>
 
