--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -51,7 +51,7 @@
 <tr><td><a href="topics/paleopathology.html" target="main"><span class="item">Paleopathology</span></a></td></tr>
 <tr><td><a href="topics/diet.html" target="main"><span class="item">Diet and nutrition</span></a></td></tr>
 <tr><td><a href="topics/automotive.html" target="main"><span class="item">Automotive</span></a></td></tr>
-<tr><td><a href="topics/physics.html" target="main"><span class="item">Physics</span></a></td></tr>
+<!-- <tr><td><a href="topics/physics.html" target="main"><span class="item">Physics</span></a></td></tr> -->
 <tr><td><a href="topics/neurology.html" target="main"><span class="item">Neurology</span></a></td></tr>
 
 
@@ -63,22 +63,23 @@
 -->
 
 <!-- Philosophy, thinking -->  
+<!--
 <tr bgcolor="#FFC0C0"><td align="center"><font size="+1"><b>Philosophy</b></font></td></tr>
 
 <tr><td><a href="topics/consciousness.html"><span class="item">Consciousness</span></a></td></tr>
 <tr><td><a href="topics/existenceandreality.html"><span class="item">Existence and Reality</span></a></td></tr>
 <tr><td><a href="topics/deontology.html"><span class="item">Medical Deontology</span></a></td></tr>
 <tr><td><a href="topics/self.html"><span class="item">Self</span></a></td></tr>
-
+-->
 
 <!-- Media & Varia -->  
 <tr bgcolor="#82EDFA"><td align="center"><font size="+1"><b>Media & Varia</b></font></td></tr>
-
+<!--
 <tr><td><a href="topics/business.html"><span class="item">Business, economics, and politics</span></a></td></tr>
 <tr><td><a href="topics/humour.html"><span class="item">Humour</span></a></td></tr>
 <tr><td><a href="topics/language.html"><span class="item">Language learning</span></a></td></tr>
 <tr><td><a href="topics/photo.html"><span class="item">Photography</span></a></td></tr>
 </table>
-
+-->
 </body>
 </html>
