--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -62,15 +62,13 @@
 <tr><td><a href="topics/clinicalliterature.html"><span class="item">Clinical Literature</span></a></td></tr>
 -->
 
-<!-- Philosophy, thinking -->  
-<!--
-<tr bgcolor="#FFC0C0"><td align="center"><font size="+1"><b>Philosophy</b></font></td></tr>
+<!-- Explore -->  
+
+<tr bgcolor="#FFC0C0"><td align="center"><font size="+1"><b>Direction and Thinking</b></font></td></tr>
 
 <tr><td><a href="topics/consciousness.html"><span class="item">Consciousness</span></a></td></tr>
 <tr><td><a href="topics/existenceandreality.html"><span class="item">Existence and Reality</span></a></td></tr>
 <tr><td><a href="topics/deontology.html"><span class="item">Medical Deontology</span></a></td></tr>
-<tr><td><a href="topics/self.html"><span class="item">Self</span></a></td></tr>
--->
 
 <!-- Media & Varia -->  
 <tr bgcolor="#82EDFA"><td align="center"><font size="+1"><b>Media & Varia</b></font></td></tr>
