--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -56,8 +56,7 @@
 <tr><td><a href="topics/neurology.html" target="main"><span class="item">Neurology</span></a></td></tr>
 
 
-
-<!-- Medicine,  Where Clinic, Research and Education meets -- for now see Obsidian files for reading, and literature for clinic & research
+<!-- Medicinee,  Where Clinic, Research and Education meets -- for now see Obsidian files for reading, and literature for clinic & research
 <tr bgcolor="#90FF90"><td align="center"><font size="+1"><b>Medicine</b></font></td></tr>
 <tr><td><a href="topics/neurology.html"><span class="item">Neurology</span></a></td></tr>
 <tr><td><a href="topics/clinicalliterature.html"><span class="item">Clinical Literature</span></a></td></tr>
