--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -32,7 +32,7 @@
 </head>
 
 <!-- TEMPORARY-->
-<body bgcolor="#FFFFFF" style="display: none;">
+<body bgcolor="#FFFFFF">
 <table class="topics" width="100%" cellpadding="2">
 
 <!-- general overview -->  
