--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -66,13 +66,13 @@
 
 <tr bgcolor="#FFC0C0"><td align="center"><font size="+1"><b>Direction and Thinking</b></font></td></tr>
 
-<tr><td><a href="topics/consciousness.html"><span class="item">Consciousness</span></a></td></tr>
-<tr><td><a href="topics/existenceandreality.html"><span class="item">Existence and Reality</span></a></td></tr>
-<tr><td><a href="topics/deontology.html"><span class="item">Medical Deontology</span></a></td></tr>
+<tr><td><a href="topics/consciousness.html"><span class="item">Determinism and Probabilism</span></a></td></tr>
+<tr><td><a href="topics/existenceandreality.html"><span class="item">Existence, Truth and Meaning</span></a></td></tr>
+<tr><td><a href="topics/deontology.html"><span class="item">Deontology</span></a></td></tr>
 
 <!-- Media & Varia -->  
-<tr bgcolor="#82EDFA"><td align="center"><font size="+1"><b>Media & Varia</b></font></td></tr>
 <!--
+<tr bgcolor="#82EDFA"><td align="center"><font size="+1"><b>Media & Varia</b></font></td></tr>
 <tr><td><a href="topics/business.html"><span class="item">Business, economics, and politics</span></a></td></tr>
 <tr><td><a href="topics/humour.html"><span class="item">Humour</span></a></td></tr>
 <tr><td><a href="topics/language.html"><span class="item">Language learning</span></a></td></tr>
