Fix HTML formatting and update links in navigation

--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -39,7 +39,7 @@
 
 <tr><td><a href="topics/welcome.html" target="main"><span class="item">Welcome</span></a></td></tr>
 <tr><td><a href="topics/faq.html" target="main"><span class="item">Questions and Answers</span></a></td></tr>
-<tr><td><a href="topics/reading .html" target="main"><span class="item">Reading Lists</span></a></td></tr>
+<tr><td><a href="reading.html" target="main"><span class="item">Reading Lists</span></a></td></tr>
 <tr><td><a href="topics/map.html" target="_top"><span class="item">Site Map</span></a></td></tr>
 
 
@@ -80,3 +80,4 @@
 -->
 </body>
 </html>
+
