--- a/nav/reading-page.html
+++ b/nav/reading-page.html
@@ -2,6 +2,14 @@
 <html>
 <head>
   <title>Lucius Library</title>
+<style type="text/css">
+    body{
+        background-color: #f4f1e3;
+        font-family: 'Goudy Old Style', 'Times New Roman', serif;
+        width: 50%;
+    }
+
+</style>
 </head>
 <body>
 
