--- a/nav/topics/neurology.html
+++ b/nav/topics/neurology.html
@@ -20,7 +20,8 @@
     <h2 class="topic-item"><a href="neurodriving.html">Extracorporal Mobility Device</a></h2>
     <h4 class="topic-description">Explore the science of neurodriving!</h6>
 
-
+    <h2 class="topic-item"><a href="neurosuicide.html">Neurobiology of Suicide</a></h2>
+    <h4 class="topic-description">When Death Exceeds Life.</h6>
 
 </div>
 
