--- a/nav/topics/neurosuicide.html
+++ b/nav/topics/neurosuicide.html
@@ -13,6 +13,9 @@
     .article-header{
         justify-items: center;
     }
+    .table-of-contents{
+        list-style: ;
+    }
     
 </style>
 </head>
@@ -26,16 +29,20 @@
 <h2>Neuobiology of Suicide</h3>
 <h3>When Death Exceeds Life.</h3>
 
-<p>
-    1. Epidemiology and statistics of suicide.
-    2. History and evolution of suicide. 
-    3. Is suicide unique to our species?
-    4. Psychology of suicide. Mental frameworks and (sub)conscious aetiologies and reasonings. 
-    5. Neurobiology and genetics of suicide.
-    
-</p>
+<ol class="table-of-contents">
+    <li><a href="#">Epidemiology and statistics of suicide.</a></li>
+    <li><a href="#">History and evolution of suicide. </a></li>
+    <li><a href="#">Is suicide unique to our species?</a></li>
+    <li><a href="#">Psychology of suicide. Mental frameworks and (sub)conscious aetiologies and reasonings.</a></li> 
+    <li><a href="#">Neurobiology and genetics of suicide.</a></li>
+</ol>
 
 </div>
+
+
+<footer>
+    <p>temporary footer text</p>
+</footer>
 
 
 </body>
