--- a/nav/topics/neurosuicide.html
+++ b/nav/topics/neurosuicide.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="page">
-<h2>Neuobiology of Suicide</h3>
+<h2>Neurobiology of Suicide</h3>
 <h3>When Death Exceeds Life.</h3>
 
 <ol>
