--- a/nav/topics/neurodriving.html
+++ b/nav/topics/neurodriving.html
@@ -36,6 +36,13 @@
     The visuomotor eye-head steering coördination ('Oculo-bracial reflex'). 
 </p>
 
+
+<p>
+    In what ways do we engineer the car to fit our neurobiology? An example is <a href="#">powersteering</a>. Electrical feedback delivered by subltle manual movements of the steering wheel drives a system
+    that amplifies our input, making it easier to steer the car. This is an example of a <a href="#">closed-loop system</a>, where feedback from our actions is used to adjust and refine our movements.
+</p>
+
+
 </div>
 
 
