--- a/nav/topics/neurodriving.html
+++ b/nav/topics/neurodriving.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="page">
-<h2>Extra Corporal Mobility Device</h3>
+<h2>Extracorporal Mobility Device</h3>
 <h3>"In Amerika kan je niet zonder, Faraday beschermt jou bij donder."</h3>
 
 <p>
